# frugal

./: .gitignore  AGENTS.md  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  SECURITY.md
.fgl/: config.toml
.github/workflows/: ci.yml  release.yml
docs/: BENCHMARKS.md
scripts/: benchmark.py  install.ps1  install.sh  uninstall.ps1  uninstall.sh
src/: app.rs  cli.rs  config.rs  discovery.rs  error.rs  gain.rs  init.rs  lib.rs  main.rs  markers.rs  pack.rs  status.rs  token.rs
src/languages/: css.rs  go.rs  html.rs  javascript.rs  json.rs  markdown.rs  mod.rs  python.rs  rust.rs  shell.rs  toml.rs  typescript.rs  yaml.rs
tests/: cli_gain.rs  cli_init.rs  cli_pack.rs  cli_smoke.rs  cli_status.rs  language_css.rs  language_go.rs  language_html.rs  language_javascript.rs  language_json.rs  language_markdown.rs  language_python.rs  language_rust.rs  language_shell.rs  language_toml.rs  language_typescript.rs  language_yaml.rs
tests/common/: mod.rs
tests/fixtures/languages/css/: basic.css  basic.skeleton  media.css  media.skeleton  selectors.css  selectors.skeleton
tests/fixtures/languages/go/: grouped.go  grouped.skeleton  top_level.go  top_level.skeleton
tests/fixtures/languages/html/: basic.html  basic.skeleton  components.html  components.skeleton  semantic.html  semantic.skeleton
tests/fixtures/languages/javascript/: basic.js  basic.skeleton
tests/fixtures/languages/json/: basic.json  basic.skeleton
tests/fixtures/languages/markdown/: basic.md  basic.skeleton
tests/fixtures/languages/python/: class_methods.py  class_methods.skeleton
tests/fixtures/languages/rust/: api_surface.rs  api_surface.skeleton  unsupported_only.rs
tests/fixtures/languages/shell/: basic.sh  basic.skeleton
tests/fixtures/languages/toml/: basic.skeleton  basic.toml
tests/fixtures/languages/typescript/: basic.skeleton  basic.ts
tests/fixtures/languages/yaml/: basic.skeleton  basic.yaml
(+4 files in other folders)
