[package]
name = "frugal"
version = "0.2.0"
edition = "2021"
default-run = "fgl"
description = "Cache-aware context packer for AI-assisted development"
license = "MIT"
readme = "README.md"
repository = "https://github.com/jeverett32/frugal"
homepage = "https://github.com/jeverett32/frugal"
documentation = "https://github.com/jeverett32/frugal#readme"
keywords = ["ai", "cli", "prompt", "cache", "developer-tools"]
categories = ["command-line-utilities", "development-tools"]

[lib]
name = "frugal"
path = "src/lib.rs"

[[bin]]
name = "fgl"
path = "src/main.rs"

[dependencies]
clap = { version = "4.5.39", features = ["derive"] }
ignore = "0.4.23"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
tree-sitter = "0.25.10"
tree-sitter-go = "0.25.0"
tree-sitter-javascript = "0.25.0"
tree-sitter-python = "0.25.0"
tree-sitter-rust = "0.24.2"
tree-sitter-typescript = "0.23.2"
toml = "0.8.23"
